<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.rosinante.firebasechatmvp.views.activity.LoginActivity">

    <Button
        android:id="@+id/button_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ground_button"
        android:text="@string/button_auth_text"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/text_status_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_success"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linear_button_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:visibility="gone">

        <Button
            android:id="@+id/button_create_room"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ground_button"
            android:text="@string/create_chat_room_text"
            android:textColor="@android:color/white"
            android:textIsSelectable="true"
            tools:text="Create Chat Room" />

        <Button
            android:id="@+id/button_enter_room"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ground_button"
            android:text="@string/enter_chat_room_text"
            android:textColor="@android:color/white"
            android:textIsSelectable="true"
            tools:text="Enter Chat Room" />
    </LinearLayout>
</LinearLayout>
